// Copyright (c) 2022 IoTeX
// This source code is provided 'as is' and no warranties are given as to title or non-infringement, merchantability
// or fitness for purpose and, to the extent permitted by law, all liability for your use of the code is disclaimed.
// This source code is governed by Apache License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package accountpb;
option go_package = "github.com/iotexproject/iotex-core/action/protocol/account/accountpb";

enum AccountType {
    DEFAULT = 0;
    ZERO_NONCE = 1;
}

message Account {
    // used by state-based model
    uint64 nonce  = 1;
    string balance  = 2;
    bytes root  = 3;
    bytes codeHash  = 4;
    bool isCandidate = 5;
    bytes votingWeight  = 6;
    AccountType type = 7;
}
